Fix Verse swap fetch, swapped not showing after fetch

--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -1,3 +1,4 @@
 h1 {
-  margin: $md 0 $xs;
+  margin: 0 0 $xs;
+  padding-top: $md;
 }
